nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
         app: nginx
    name: nginx-svc
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 12345
    selector:
         app: nginx
    type: NodePort
