ingress-test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-test
spec:
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name:  nginx
              port:
                number: 80
