nginx-svc1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-svc1
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: host1.domain.ext
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
